Fixed corner radius overflow on shot hover

--- a/dribbble.com/miscellaneous.disabled.css
+++ b/dribbble.com/miscellaneous.disabled.css
@@ -70,11 +70,6 @@ ol.comments li h2 a:hover img{
 	opacity: 1;
 }
 
-ol.dribbbles li div.dribbble a.dribbble-over{
-	width: 96%;
-	margin: 2% 2% 0;
-}
-
 #header {
 
 }
